--- a/Client/Views/Products/Create.cshtml
+++ b/Client/Views/Products/Create.cshtml
@@ -1,10 +1,17 @@
 ﻿@model Client.Models.Product
 
 @{
-    ViewData["Title"] = "Create";
+    Layout = null;
 }
 
-<h1>Create</h1>
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Create</title>
+</head>
+<body>
 
 <h4>Product</h4>
 <hr />
@@ -56,3 +63,5 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+</body>
+</html>
