--- a/Client/Views/Products/Index.cshtml
+++ b/Client/Views/Products/Index.cshtml
@@ -1,11 +1,17 @@
 ﻿@model IEnumerable<Client.Models.Product>
 
 @{
-    ViewData["Title"] = "Index";
+    Layout = null;
 }
 
-<h1>Index</h1>
+<!DOCTYPE html>
 
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
+</head>
+<body>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -55,11 +61,13 @@
                 @Html.DisplayFor(modelItem => item.Stock)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.ProductID */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.ProductID */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.ProductID */ })
+                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
 }
     </tbody>
 </table>
+</body>
+</html>
